Add JsonDoc to Spring Boot

--- a/pom.xml
+++ b/pom.xml
@@ -55,10 +55,11 @@
     <version.servlet-api>3.1.0</version.servlet-api>
     <version.slf4j>1.7.22</version.slf4j>
     <version.snakeyaml>1.19</version.snakeyaml>
-    <version.springframework>5.0.6.RELEASE</version.springframework>
-    <version.spring-boot>2.0.2.RELEASE</version.spring-boot>
+    <version.springframework>5.0.9.RELEASE</version.springframework>
+    <version.spring-boot>2.0.5.RELEASE</version.spring-boot>
+    <version.spring-boot-starter-jsondoc>1.2.19</version.spring-boot-starter-jsondoc>
     <version.spring-data-commons>1.13.4.RELEASE</version.spring-data-commons>
-    <version.spring-security>5.0.5.RELEASE</version.spring-security>
+    <version.spring-security>5.0.8.RELEASE</version.spring-security>
     <version.thymeleaf>3.0.9.RELEASE</version.thymeleaf>
 
     <!-- Plugin versions -->
@@ -157,6 +158,11 @@
         <artifactId>hamcrest-core</artifactId>
         <version>${version.hamcrest-core}</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.jsondoc</groupId>
+        <artifactId>spring-boot-starter-jsondoc</artifactId>
+        <version>${version.spring-boot-starter-jsondoc}</version>
       </dependency>
       <dependency>
         <groupId>org.junit.jupiter</groupId>
