--- a/dc-commons-springboot/pom.xml
+++ b/dc-commons-springboot/pom.xml
@@ -47,6 +47,10 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.jsondoc</groupId>
+      <artifactId>spring-boot-starter-jsondoc</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
       <scope>test</scope>
