--- a/dc-commons-springsecurity/pom.xml
+++ b/dc-commons-springsecurity/pom.xml
@@ -23,6 +23,10 @@
       <artifactId>jjwt</artifactId>
     </dependency>
     <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
     </dependency>
