--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
     <version.geoip>2.8.0</version.geoip>
     <version.hamcrest-core>1.3</version.hamcrest-core>
     <version.jackson>2.9.7</version.jackson>
+    <version.jdbi3>3.0.1</version.jdbi3>
     <version.jjwt>0.7.0</version.jjwt>
     <version.joda-time>2.9.4</version.joda-time>
     <version.junit>4.12</version.junit>
@@ -51,6 +52,7 @@
     <version.logback-classic>1.2.3</version.logback-classic>
     <version.mockito-java8>2.0.1</version.mockito-java8>
     <version.mockito-core>2.7.6</version.mockito-core>
+    <version.openfeign>9.5.1</version.openfeign>
     <version.saxon>9.8.0-14</version.saxon>
     <version.servlet-api>3.1.0</version.servlet-api>
     <version.slf4j>1.7.22</version.slf4j>
@@ -102,9 +104,19 @@
         <scope>test</scope>
       </dependency>
       <dependency>
+        <groupId>de.digitalcollections.commons</groupId>
+        <artifactId>dc-commons-springsecurity</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
         <groupId>de.digitalcollections.model</groupId>
         <artifactId>dc-model</artifactId>
         <version>${version.dc-model}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.github.openfeign</groupId>
+        <artifactId>feign-core</artifactId>
+        <version>${version.openfeign}</version>
       </dependency>
       <dependency>
         <groupId>info.solidsoft.mockito</groupId>
@@ -158,6 +170,11 @@
         <artifactId>hamcrest-core</artifactId>
         <version>${version.hamcrest-core}</version>
         <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.jdbi</groupId>
+        <artifactId>jdbi3-core</artifactId>
+        <version>${version.jdbi3}</version>
       </dependency>
       <dependency>
         <groupId>org.jsondoc</groupId>
