--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
     <version.geoip>2.8.0</version.geoip>
     <version.hamcrest-core>1.3</version.hamcrest-core>
     <version.jackson>2.9.7</version.jackson>
+    <version.jaxb-api>2.2.11</version.jaxb-api>
     <version.javax.annotation-api>1.2</version.javax.annotation-api>
     <version.jjwt>0.7.0</version.jjwt>
     <version.joda-time>2.9.4</version.joda-time>
@@ -50,8 +51,8 @@
     <version.junit5>5.1.0</version.junit5>
     <version.junit5-platform>1.1.0</version.junit5-platform>
     <version.logback-classic>1.2.3</version.logback-classic>
-    <version.mockito-java8>2.0.1</version.mockito-java8>
-    <version.mockito-core>2.7.6</version.mockito-core>
+    <version.mockito-java8>2.5.0</version.mockito-java8>
+    <version.mockito-core>2.23.0</version.mockito-core>
     <version.saxon>9.8.0-6</version.saxon>
     <version.servlet-api>3.1.0</version.servlet-api>
     <version.slf4j>1.7.22</version.slf4j>
@@ -60,14 +61,15 @@
     <version.spring-boot>2.0.5.RELEASE</version.spring-boot>
     <version.spring-boot-starter-jsondoc>1.2.19</version.spring-boot-starter-jsondoc>
     <version.spring-data-commons>1.13.4.RELEASE</version.spring-data-commons>
-    <version.spring-security>5.0.8.RELEASE</version.spring-security>
+    <version.spring-security>5.1.1.RELEASE</version.spring-security>
     <version.thymeleaf>3.0.9.RELEASE</version.thymeleaf>
 
     <!-- Plugin versions -->
     <version.jacoco-maven-plugin>0.8.2</version.jacoco-maven-plugin>
-    <version.maven-compiler-plugin>3.1</version.maven-compiler-plugin>
+    <version.maven-compiler-plugin>3.8.0</version.maven-compiler-plugin>
     <version.maven-gpg-plugin>1.6</version.maven-gpg-plugin>
     <version.maven-javadoc-plugin>3.0.1</version.maven-javadoc-plugin>
+    <version.maven-junit-jupiter-engine-plugin>3.0.1</version.maven-junit-jupiter-engine-plugin>
     <version.nexus-staging-maven-plugin>1.6.7</version.nexus-staging-maven-plugin>
     <version.maven-source-plugin>3.0.1</version.maven-source-plugin>
     <version.maven-surefire-plugin>2.22.1</version.maven-surefire-plugin>
@@ -128,6 +130,11 @@
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
         <version>${version.servlet-api}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>${version.jaxb-api}</version>
       </dependency>
       <dependency>
         <groupId>joda-time</groupId>
@@ -377,14 +384,10 @@
           <properties>
             <excludeTags>integration-test</excludeTags>
           </properties>
+          <forkCount>1</forkCount>
+          <reuseForks>false</reuseForks>
         </configuration>
         <dependencies>
-          <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-surefire-provider</artifactId>
-            <version>${version.junit5-platform}</version>
-            <scope>runtime</scope>
-          </dependency>
           <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
