--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
     <version.assertj>3.5.2</version.assertj>
     <version.commons-beanutils>1.9.3</version.commons-beanutils>
     <version.commons-lang3>3.4</version.commons-lang3>
-    <version.dc-model>2.0.0-SNAPSHOT</version.dc-model>
+    <version.dc-model>2.0.0</version.dc-model>
     <version.geoip>2.8.0</version.geoip>
     <version.hamcrest-core>1.3</version.hamcrest-core>
     <version.jackson>2.9.7</version.jackson>
@@ -58,9 +58,9 @@
     <version.saxon>9.8.0-6</version.saxon>
     <version.servlet-api>3.1.0</version.servlet-api>
     <version.slf4j>1.7.22</version.slf4j>
-    <version.snakeyaml>1.19</version.snakeyaml>
-    <version.springframework>5.0.9.RELEASE</version.springframework>
-    <version.spring-boot>2.0.6.RELEASE</version.spring-boot>
+    <version.snakeyaml>1.23</version.snakeyaml>
+    <version.springframework>5.1.1.RELEASE</version.springframework>
+    <version.spring-boot>2.1.0.RELEASE</version.spring-boot>
     <version.spring-boot-starter-jsondoc>1.2.19</version.spring-boot-starter-jsondoc>
     <version.spring-data-commons>1.13.16.RELEASE</version.spring-data-commons>
     <version.spring-security>5.1.1.RELEASE</version.spring-security>
@@ -320,8 +320,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${version.maven-compiler-plugin}</version>
         <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
+          <showDeprecation>true</showDeprecation>
           <compilerArgument>-Xlint:unchecked</compilerArgument>
         </configuration>
       </plugin>
