--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>de.digitalcollections.commons</groupId>
   <artifactId>dc-commons</artifactId>
-  <version>2.1.0</version>
+  <version>3.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -39,7 +39,7 @@
     <version.assertj>3.5.2</version.assertj>
     <version.commons-beanutils>1.9.3</version.commons-beanutils>
     <version.commons-lang3>3.4</version.commons-lang3>
-    <version.dc-model>2.0.0</version.dc-model>
+    <version.dc-model>2.1.0-SNAPSHOT</version.dc-model>
     <version.geoip>2.8.0</version.geoip>
     <version.hamcrest-core>1.3</version.hamcrest-core>
     <version.jackson>2.9.7</version.jackson>
