--- a/dc-commons-prosemirror/pom.xml
+++ b/dc-commons-prosemirror/pom.xml
@@ -48,13 +48,13 @@
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
-        <version>${version.junit5}</version>
+        <version>${version.junit}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
-        <version>${version.junit5}</version>
+        <version>${version.junit}</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
