--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
     <version.assertj>3.5.2</version.assertj>
     <version.commons-beanutils>1.9.3</version.commons-beanutils>
     <version.commons-lang3>3.4</version.commons-lang3>
-    <version.dc-model>2.2.0-SNAPSHOT</version.dc-model>
+    <version.dc-model>2.2.0</version.dc-model>
     <version.geoip>2.8.0</version.geoip>
     <version.hamcrest-core>1.3</version.hamcrest-core>
     <version.jackson>2.9.8</version.jackson>
@@ -48,7 +48,7 @@
     <version.jdbi3>3.0.1</version.jdbi3>
     <version.jjwt>0.7.0</version.jjwt>
     <version.joda-time>2.9.4</version.joda-time>
-    <version.junit5>5.3.2</version.junit5>
+    <version.junit>5.3.2</version.junit>
     <version.logback-classic>1.2.3</version.logback-classic>
     <version.mockito-java8>2.5.0</version.mockito-java8>
     <version.mockito-core>2.23.0</version.mockito-core>
@@ -189,13 +189,13 @@
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
-        <version>${version.junit5}</version>
+        <version>${version.junit}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
-        <version>${version.junit5}</version>
+        <version>${version.junit}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
