--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 
   <properties>
     <!-- Build properties -->
+    <java.version>1.8</java.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
