--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>de.digitalcollections.commons</groupId>
   <artifactId>dc-commons</artifactId>
-  <version>4.0.0-SNAPSHOT</version>
+  <version>4.0.0</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -40,7 +40,7 @@
     <version.assertj>3.12.1</version.assertj>
     <version.commons-beanutils>1.9.3</version.commons-beanutils>
     <version.commons-lang3>3.8.1</version.commons-lang3>
-    <version.dc-model>3.0.0-SNAPSHOT</version.dc-model>
+    <version.dc-model>3.0.0</version.dc-model>
     <version.geoip>2.12.0</version.geoip>
     <version.hamcrest-core>2.1</version.hamcrest-core>
     <version.jackson>2.9.8</version.jackson>
