--- a/dc-commons-feign/pom.xml
+++ b/dc-commons-feign/pom.xml
@@ -5,21 +5,29 @@
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
     <artifactId>dc-commons</artifactId>
-    <version>4.0.1</version>
+    <version>4.1.0-SNAPSHOT</version>
   </parent>
   
   <name>DigitalCollections: Commons REST Feign</name>
   <artifactId>dc-commons-feign</artifactId>
+  <version>4.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   
+  <properties>
+    <version.dc-model>3.0.0</version.dc-model>
+    <version.feign-core>10.2.0</version.feign-core>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>de.digitalcollections.model</groupId>
       <artifactId>dc-model</artifactId>
+      <version>${version.dc-model}</version>
     </dependency>
     <dependency>
       <groupId>io.github.openfeign</groupId>
       <artifactId>feign-core</artifactId>
+      <version>${version.feign-core}</version>
     </dependency>
   </dependencies>
 </project>
