--- a/dc-commons-jdbi/pom.xml
+++ b/dc-commons-jdbi/pom.xml
@@ -6,25 +6,35 @@
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
     <artifactId>dc-commons</artifactId>
-    <version>4.0.1</version>
+    <version>4.1.0-SNAPSHOT</version>
   </parent>
   
   <name>DigitalCollections: Commons JDBI</name>
   <artifactId>dc-commons-jdbi</artifactId>
+  <version>4.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
+  <properties>
+    <version.dc-model>3.0.0</version.dc-model>
+    <version.jackson-databind>2.9.8</version.jackson-databind>
+    <version.jdbi3>3.6.0</version.jdbi3>
+  </properties>
+    
   <dependencies>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
+      <version>${version.jackson-databind}</version>
     </dependency>
     <dependency>
       <groupId>de.digitalcollections.model</groupId>
       <artifactId>dc-model</artifactId>
+      <version>${version.dc-model}</version>
     </dependency>
     <dependency>
       <groupId>org.jdbi</groupId>
       <artifactId>jdbi3-core</artifactId>
+      <version>${version.jdbi3}</version>
     </dependency>
   </dependencies>
 </project>
