--- a/dc-commons-prosemirror/dc-commons-prosemirror-model-jackson/pom.xml
+++ b/dc-commons-prosemirror/dc-commons-prosemirror-model-jackson/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
     <artifactId>dc-commons-prosemirror</artifactId>
-    <version>4.0.1</version>
+    <version>4.1.0-SNAPSHOT</version>
   </parent>
 
   <name>DigitalCollections: Commons ProseMirror Model Jackson</name>
@@ -13,7 +13,11 @@
   <packaging>jar</packaging>
 
   <properties>
-    <!-- Plugin versions -->
+    <version.assertj>3.12.2</version.assertj>
+    <version.commons-beanutils>1.9.3</version.commons-beanutils>
+    <version.jackson>2.9.8</version.jackson>
+    <version.junit>5.4.1</version.junit>
+    <version.logback-classic>1.2.3</version.logback-classic>
     <version.maven-resources-plugin>3.1.0</version.maven-resources-plugin>
   </properties>
 
@@ -21,36 +25,44 @@
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
+      <version>${version.logback-classic}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
+      <version>${version.jackson}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
+      <version>${version.jackson}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
+      <version>${version.jackson}</version>
     </dependency>
     <dependency>
       <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
+      <version>${version.commons-beanutils}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>de.digitalcollections.commons</groupId>
       <artifactId>dc-commons-prosemirror-model</artifactId>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
+      <version>${version.assertj}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
+      <version>${version.junit}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
