--- a/dc-commons-prosemirror/dc-commons-prosemirror-model/pom.xml
+++ b/dc-commons-prosemirror/dc-commons-prosemirror-model/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
     <artifactId>dc-commons-prosemirror</artifactId>
-    <version>4.0.1</version>
+    <version>4.1.0-SNAPSHOT</version>
   </parent>
   
   <name>DigitalCollections: Commons ProseMirror Model</name>
