--- a/dc-commons-springaop/pom.xml
+++ b/dc-commons-springaop/pom.xml
@@ -5,29 +5,40 @@
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
     <artifactId>dc-commons</artifactId>
-    <version>4.0.1</version>
+    <version>4.1.0-SNAPSHOT</version>
   </parent>
   
   <name>DigitalCollections: Commons Spring AOP</name>
   <artifactId>dc-commons-springaop</artifactId>
+  <version>4.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
+  
+  <properties>
+    <version.aspectjweaver>1.9.2</version.aspectjweaver>
+    <version.slf4j>1.7.26</version.slf4j>
+    <version.spring>5.1.5.RELEASE</version.spring>
+  </properties>
   
   <dependencies>
     <dependency>
       <groupId>org.aspectj</groupId>
       <artifactId>aspectjweaver</artifactId>
+      <version>${version.aspectjweaver}</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
+      <version>${version.slf4j}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-aop</artifactId>
+      <version>${version.spring}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
+      <version>${version.spring}</version>
     </dependency>
   </dependencies>
 </project>
