--- a/dc-commons-springboot/pom.xml
+++ b/dc-commons-springboot/pom.xml
@@ -6,88 +6,121 @@
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
     <artifactId>dc-commons</artifactId>
-    <version>4.0.1</version>
+    <version>4.1.0-SNAPSHOT</version>
   </parent>
 
   <name>DigitalCollections: Commons Spring Boot (Spring Boot 2)</name>
   <artifactId>dc-commons-springboot</artifactId>
+  <version>4.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
+
+  <properties>
+    <version.assertj>3.12.2</version.assertj>
+    <version.dc-commons-springsecurity>4.1.0-SNAPSHOT</version.dc-commons-springsecurity>
+    <version.hamcrest-core>2.1</version.hamcrest-core>
+    <version.jackson>2.9.8</version.jackson>
+    <version.junit>5.4.1</version.junit>
+    <version.micrometer>1.1.3</version.micrometer>
+    <version.mockito-core>2.25.1</version.mockito-core>
+    <version.slf4j>1.7.26</version.slf4j>
+    <version.snakeyaml>1.24</version.snakeyaml>
+    <version.spring>5.1.5.RELEASE</version.spring>
+    <version.spring-boot>2.1.3.RELEASE</version.spring-boot>
+    <version.spring-boot-starter-jsondoc>1.2.20</version.spring-boot-starter-jsondoc>
+  </properties>
 
   <dependencies>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
+      <version>${version.jackson}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
+      <version>${version.jackson}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>de.digitalcollections.commons</groupId>
       <artifactId>dc-commons-springsecurity</artifactId>
+      <version>${version.dc-commons-springsecurity}</version>
     </dependency>
     <dependency>
       <groupId>io.micrometer</groupId>
       <artifactId>micrometer-core</artifactId>
+      <version>${version.micrometer}</version>
     </dependency>
     <dependency>
       <groupId>io.micrometer</groupId>
       <artifactId>micrometer-registry-prometheus</artifactId>
+      <version>${version.micrometer}</version>
     </dependency>
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
+      <version>${version.assertj}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-core</artifactId>
+      <version>${version.hamcrest-core}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.jsondoc</groupId>
       <artifactId>spring-boot-starter-jsondoc</artifactId>
+      <version>${version.spring-boot-starter-jsondoc}</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
+      <version>${version.junit}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
+      <version>${version.mockito-core}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
+      <version>${version.slf4j}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
+      <version>${version.spring}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
+      <version>${version.spring}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
+      <version>${version.spring}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-actuator</artifactId>
+      <version>${version.spring-boot}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-test</artifactId>
+      <version>${version.spring-boot}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.yaml</groupId>
       <artifactId>snakeyaml</artifactId>
+      <version>${version.snakeyaml}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
