--- a/dc-commons-springdata/pom.xml
+++ b/dc-commons-springdata/pom.xml
@@ -5,21 +5,29 @@
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
     <artifactId>dc-commons</artifactId>
-    <version>4.0.1</version>
+    <version>4.1.0-SNAPSHOT</version>
   </parent>
   
   <name>DigitalCollections: Commons Spring Data</name>
   <artifactId>dc-commons-springdata</artifactId>
+  <version>4.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
+  
+  <properties>
+    <version.dc-model>3.0.0</version.dc-model>
+    <version.spring-data-commons>2.1.5.RELEASE</version.spring-data-commons>
+  </properties>
   
   <dependencies>
     <dependency>
       <groupId>de.digitalcollections.model</groupId>
       <artifactId>dc-model</artifactId>
+      <version>${version.dc-model}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-commons</artifactId>
+      <version>${version.spring-data-commons}</version>
     </dependency>
   </dependencies>
 </project>
