--- a/dc-commons-yaml/pom.xml
+++ b/dc-commons-yaml/pom.xml
@@ -5,40 +5,55 @@
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
     <artifactId>dc-commons</artifactId>
-    <version>4.0.1</version>
+    <version>4.1.0-SNAPSHOT</version>
   </parent>
   
   <name>DigitalCollections: Commons YAML</name>
   <artifactId>dc-commons-yaml</artifactId>
+  <version>4.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   
+  <properties>
+    <version.assertj>3.12.2</version.assertj>
+    <version.joda-time>2.10.1</version.joda-time>
+    <version.junit>5.4.1</version.junit>
+    <version.slf4j>1.7.26</version.slf4j>
+    <version.snakeyaml>1.24</version.snakeyaml>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
+      <version>${version.joda-time}</version>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
+      <version>${version.assertj}</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
+      <version>${version.junit}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
+      <version>${version.slf4j}</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
+      <version>${version.slf4j}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.yaml</groupId>
       <artifactId>snakeyaml</artifactId>
+      <version>${version.snakeyaml}</version>
     </dependency>
   </dependencies>
 </project>
