--- a/dc-commons-jdbi/pom.xml
+++ b/dc-commons-jdbi/pom.xml
@@ -15,7 +15,7 @@
   <packaging>jar</packaging>
 
   <properties>
-    <version.dc-model>4.0.2</version.dc-model>
+    <version.dc-model>4.0.3-SNAPSHOT</version.dc-model>
     <version.jackson-databind>2.10.1</version.jackson-databind>
     <version.jdbi3>3.10.1</version.jdbi3>
   </properties>
