--- a/dc-commons-jdbi/pom.xml
+++ b/dc-commons-jdbi/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
     <artifactId>dc-commons</artifactId>
-    <version>4.1.1</version>
+    <version>4.2.0-SNAPSHOT</version>
   </parent>
 
   <name>DigitalCollections: Commons JDBI</name>
