--- a/dc-commons-server/pom.xml
+++ b/dc-commons-server/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
     <artifactId>dc-commons</artifactId>
-    <version>4.1.1</version>
+    <version>4.2.0-SNAPSHOT</version>
   </parent>
   
   <name>DigitalCollections: Commons Server</name>
   <artifactId>dc-commons-server</artifactId>
-  <version>4.1.1</version>
+  <version>4.2.0</version>
   <packaging>jar</packaging>
   
   <properties>
