--- a/dc-commons-file/pom.xml
+++ b/dc-commons-file/pom.xml
@@ -13,79 +13,68 @@
   <version>5.2.0</version>
   <packaging>jar</packaging>
 
-  <properties>
-    <version.assertj-core>3.23.1</version.assertj-core>
-    <version.dc-model>9.0.0</version.dc-model>
-    <version.junit>5.8.2</version.junit>
-    <version.mockito-core>4.6.1</version.mockito-core>
-    <version.slf4j>1.7.36</version.slf4j>
-    <version.snakeyaml>1.30</version.snakeyaml>
-    <version.spring>5.2.9.RELEASE</version.spring>
-    <version.spring-boot>2.3.4.RELEASE</version.spring-boot>
-  </properties>
-
   <dependencies>
     <dependency>
       <groupId>de.digitalcollections.model</groupId>
       <artifactId>dc-model</artifactId>
-      <version>${version.dc-model}</version>
+      <version>9.2.0</version>
     </dependency>
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
-      <version>${version.assertj-core}</version>
+      <version>3.23.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>${version.junit}</version>
+      <version>5.8.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>${version.mockito-core}</version>
+      <version>4.6.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>${version.slf4j}</version>
+      <version>1.7.36</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
-      <version>${version.slf4j}</version>
+      <version>1.7.36</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot</artifactId>
-      <version>${version.spring-boot}</version>
+      <version>2.3.4.RELEASE</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-configuration-processor</artifactId>
-      <version>${version.spring-boot}</version>
+      <version>2.3.4.RELEASE</version>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-test</artifactId>
-      <version>${version.spring-boot}</version>
+      <version>2.3.4.RELEASE</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
-      <version>${version.spring}</version>
+      <version>5.2.9.RELEASE</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.yaml</groupId>
       <artifactId>snakeyaml</artifactId>
-      <version>${version.snakeyaml}</version>
+      <version>1.30</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
