--- a/dc-commons-springboot/pom.xml
+++ b/dc-commons-springboot/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -14,107 +13,92 @@
   <version>4.1.1</version>
   <packaging>jar</packaging>
 
-  <properties>
-    <version.assertj>3.23.1</version.assertj>
-    <version.dc-commons-springsecurity>4.1.1</version.dc-commons-springsecurity>
-    <version.jackson-annotations>2.11.2</version.jackson-annotations>
-    <version.jackson-databind>2.11.0</version.jackson-databind>
-    <version.junit>5.8.2</version.junit>
-    <version.micrometer>1.5.5</version.micrometer>
-    <version.mockito-core>4.6.1</version.mockito-core>
-    <version.slf4j>1.7.36</version.slf4j>
-    <version.snakeyaml>1.30</version.snakeyaml>
-    <version.spring>5.2.9.RELEASE</version.spring>
-    <version.spring-boot>2.3.4.RELEASE</version.spring-boot>
-    <version.spring-boot-starter-jsondoc>1.2.23</version.spring-boot-starter-jsondoc>
-  </properties>
-
   <dependencies>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
-      <version>${version.jackson-annotations}</version>
+      <version>2.11.2</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>${version.jackson-databind}</version>
+      <version>2.11.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>de.digitalcollections.commons</groupId>
       <artifactId>dc-commons-springsecurity</artifactId>
-      <version>${version.dc-commons-springsecurity}</version>
+      <version>4.1.1</version>
     </dependency>
     <dependency>
       <groupId>io.micrometer</groupId>
       <artifactId>micrometer-core</artifactId>
-      <version>${version.micrometer}</version>
+      <version>1.5.5</version>
     </dependency>
     <dependency>
       <groupId>io.micrometer</groupId>
       <artifactId>micrometer-registry-prometheus</artifactId>
-      <version>${version.micrometer}</version>
+      <version>1.5.5</version>
     </dependency>
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
-      <version>${version.assertj}</version>
+      <version>3.23.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.jsondoc</groupId>
       <artifactId>spring-boot-starter-jsondoc</artifactId>
-      <version>${version.spring-boot-starter-jsondoc}</version>
+      <version>1.2.23</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>${version.junit}</version>
+      <version>5.8.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>${version.mockito-core}</version>
+      <version>4.6.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>${version.slf4j}</version>
+      <version>1.7.36</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-beans</artifactId>
-      <version>${version.spring}</version>
+      <version>5.2.9.RELEASE</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>${version.spring}</version>
+      <version>5.2.9.RELEASE</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
-      <version>${version.spring}</version>
+      <version>5.2.9.RELEASE</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-actuator</artifactId>
-      <version>${version.spring-boot}</version>
+      <version>2.3.4.RELEASE</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-test</artifactId>
-      <version>${version.spring-boot}</version>
+      <version>2.3.4.RELEASE</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.yaml</groupId>
       <artifactId>snakeyaml</artifactId>
-      <version>${version.snakeyaml}</version>
+      <version>1.30</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
