--- a/dc-commons-springdata/pom.xml
+++ b/dc-commons-springdata/pom.xml
@@ -1,33 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  
+
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
     <artifactId>dc-commons</artifactId>
     <version>4.2.0</version>
   </parent>
-  
+
   <name>DigitalCollections: Commons Spring Data</name>
   <artifactId>dc-commons-springdata</artifactId>
   <version>5.0.0</version>
   <packaging>jar</packaging>
-  
-  <properties>
-    <version.dc-model>9.2.0</version.dc-model>
-    <version.spring-data-commons>2.2.7.RELEASE</version.spring-data-commons>
-  </properties>
-  
+
   <dependencies>
     <dependency>
       <groupId>de.digitalcollections.model</groupId>
       <artifactId>dc-model</artifactId>
-      <version>${version.dc-model}</version>
+      <version>9.2.0</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-commons</artifactId>
-      <version>${version.spring-data-commons}</version>
+      <version>2.2.7.RELEASE</version>
     </dependency>
   </dependencies>
 </project>
