--- a/dc-commons-web/pom.xml
+++ b/dc-commons-web/pom.xml
@@ -1,39 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  
+
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
     <artifactId>dc-commons</artifactId>
     <version>4.2.0</version>
   </parent>
-  
+
   <name>DigitalCollections: Commons Web</name>
   <artifactId>dc-commons-web</artifactId>
   <version>1.0.1</version>
   <packaging>jar</packaging>
-  
-  <properties>
-    <version.assertj>3.23.1</version.assertj>
-    <version.icu4j>71.1</version.icu4j>
-    <version.junit>5.8.2</version.junit>
-  </properties>
 
   <dependencies>
     <dependency>
       <groupId>com.ibm.icu</groupId>
       <artifactId>icu4j</artifactId>
-      <version>${version.icu4j}</version>
+      <version>71.1</version>
     </dependency>
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
-      <version>${version.assertj}</version>
+      <version>3.23.1</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>${version.junit}</version>
+      <version>5.8.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
