--- a/dc-commons-yaml/pom.xml
+++ b/dc-commons-yaml/pom.xml
@@ -1,59 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  
+
   <parent>
     <groupId>de.digitalcollections.commons</groupId>
     <artifactId>dc-commons</artifactId>
     <version>4.2.0</version>
   </parent>
-  
+
   <name>DigitalCollections: Commons YAML</name>
   <artifactId>dc-commons-yaml</artifactId>
   <version>4.1.0</version>
   <packaging>jar</packaging>
-  
-  <properties>
-    <version.assertj>3.23.1</version.assertj>
-    <version.joda-time>2.10.14</version.joda-time>
-    <version.junit>5.8.2</version.junit>
-    <version.slf4j>1.7.36</version.slf4j>
-    <version.snakeyaml>1.30</version.snakeyaml>
-  </properties>
 
   <dependencies>
     <dependency>
       <groupId>joda-time</groupId>
       <artifactId>joda-time</artifactId>
-      <version>${version.joda-time}</version>
+      <version>2.10.14</version>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
-      <version>${version.assertj}</version>
+      <version>3.23.1</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>${version.junit}</version>
+      <version>5.8.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>${version.slf4j}</version>
+      <version>1.7.36</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
-      <version>${version.slf4j}</version>
+      <version>1.7.36</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.yaml</groupId>
       <artifactId>snakeyaml</artifactId>
-      <version>${version.snakeyaml}</version>
+      <version>1.30</version>
     </dependency>
   </dependencies>
 </project>
