--- a/dc-commons-file/pom.xml
+++ b/dc-commons-file/pom.xml
@@ -10,7 +10,7 @@
 
   <name>DigitalCollections: Commons File</name>
   <artifactId>dc-commons-file</artifactId>
-  <version>5.2.0</version>
+  <version>5.2.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <dependencies>
