--- a/dc-commons-server/pom.xml
+++ b/dc-commons-server/pom.xml
@@ -10,7 +10,7 @@
 
   <name>DigitalCollections: Commons Server</name>
   <artifactId>dc-commons-server</artifactId>
-  <version>4.1.1</version>
+  <version>4.1.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <dependencies>
