--- a/dc-commons-springsecurity/pom.xml
+++ b/dc-commons-springsecurity/pom.xml
@@ -10,7 +10,7 @@
 
   <name>DigitalCollections: Commons Spring Security (Spring Security 5)</name>
   <artifactId>dc-commons-springsecurity</artifactId>
-  <version>4.1.1</version>
+  <version>4.1.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <dependencies>
