--- a/dc-commons-validation/pom.xml
+++ b/dc-commons-validation/pom.xml
@@ -10,7 +10,7 @@
 
   <name>DigitalCollections: Commons Validation</name>
   <artifactId>dc-commons-validation</artifactId>
-  <version>4.1.0</version>
+  <version>4.1.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <dependencies>
