--- a/dc-commons-web/pom.xml
+++ b/dc-commons-web/pom.xml
@@ -10,7 +10,7 @@
 
   <name>DigitalCollections: Commons Web</name>
   <artifactId>dc-commons-web</artifactId>
-  <version>1.0.1</version>
+  <version>1.0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <dependencies>
