--- a/dc-commons-yaml/pom.xml
+++ b/dc-commons-yaml/pom.xml
@@ -10,7 +10,7 @@
 
   <name>DigitalCollections: Commons YAML</name>
   <artifactId>dc-commons-yaml</artifactId>
-  <version>4.1.0</version>
+  <version>4.1.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <dependencies>
